corregidas clases de basiclayouts

--- a/client/index.html
+++ b/client/index.html
@@ -1,122 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="index.css" />
+		<title>Document</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarTogglerDemo01"
+					aria-controls="navbarTogglerDemo01"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+					<a class="navbar-brand" href="#">Nosotros</a>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a
+								class="nav-link active"
+								aria-current="page"
+								href="#"
+								>Productos</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contactenos</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled">Compras</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Sign in</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Start Trial</a>
+						</li>
+					</ul>
+					<form class="d-flex">
+						<input
+							class="form-control me-2"
+							type="search"
+							placeholder="Search"
+							aria-label="Search"
+						/>
+						<button class="btn btn-outline-success" type="submit">
+							Search
+						</button>
+					</form>
+				</div>
+			</div>
+		</nav>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">Nosotros</a>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Productos</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Contactenos</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link disabled">Compras</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sign in</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Start Trial</a>
-            </li>
-        </ul>
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+		<h1>
+			Disfruta de la Armonia<span
+				class="Harmony un concepto de belleza diferente "
+			></span>
+		</h1>
 
-        <h1>Disfruta de la Armonia<span class="Harmony un concepto de belleza diferente "></span></h1>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="primera.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="muestra.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="pimento.jpg" class="d-block w-100" alt="...">
-        </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-        
-
-        </div>
-    <div class="card-group">
-        <div class="card">
-        <img alt="abc.jpg" class="card-img-top" src="abc.jpg">
-        <div class="card-body">
-            <p class="card-text">Harmony es una empreesa creada pensando en mejorar la calida de vida de las personas, inicialmente nos dedicabamos a la estetica y a la belleza, durante el tiempo de pandemia nacio Harmony Garden como nosotros decimos un hijo de nuestro Harmony  y poco a poco fuimos consstruyendo una idea diferente de belleza en donde integramos la  alimentacion saludable y cultivada por nosotros mismos como pilar de nuestra vision, actualmente nos encontramos desarrollando diferentes tipos de proyectos al interior para poder ofertar servicios de calidad, dentro de ellos la alimentacion y el entrenamiento.</p>
-            <p class="card-text"><small class="text-muted">conoce mas de nosotros en nuestras redes sociales</small></p>
-        </div>
-        </div>
-        <div class="card">
-        <img src="esteticajpg.jpg" class="card-img-top" alt="estetica.jpg">
-        <div class="card-body">
-            <h5 class="Harmony Body">Harmony Body</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-        </div>
-        <div class="card">
-        <img src="estilo.jpg" class="card-img-top" alt="estilo.jpg">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-        </div>
-        <div class="row g-0 bg-light position-relative">
-            <div class="col-md-6 mb-md-0 p-md-4">
-            <h5 class="mt-0">Columns with stretched link</h5>
-            <p>Another instance of placeholder content for this other custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-            <a href="#" class="stretched-link">Go somewhere</a>
-            </div>
-            <div class="col-md-6 p-4 ps-md-0">
-                <img src="estilo.jpg" class="w-100" alt="estilo.jpg">
-                </div>
-    </div>
-    <div class="d-flex position-relative">
-        <img src="ejercicio.jpg" class="w-100" alt="ejercicio.jpg">
-        <div>
-        <h5 class="mt-0">Custom component with stretched link</h5>
-        <p>This is some placeholder content for the custom component. It is intended to mimic what some real-world content would look like, and we're using it here to give the component a bit of body and size.</p>
-        <a href="#" class="stretched-link">Go somewhere</a>
-        </div>
-    </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-</body>
+		<div
+			id="carouselExampleIndicators"
+			class="carousel slide"
+			data-bs-ride="carousel"
+		>
+			<div class="carousel-indicators">
+				<button
+					type="button"
+					data-bs-target="#carouselExampleIndicators"
+					data-bs-slide-to="0"
+					class="active"
+					aria-current="true"
+					aria-label="Slide 1"
+				></button>
+				<button
+					type="button"
+					data-bs-target="#carouselExampleIndicators"
+					data-bs-slide-to="1"
+					aria-label="Slide 2"
+				></button>
+				<button
+					type="button"
+					data-bs-target="#carouselExampleIndicators"
+					data-bs-slide-to="2"
+					aria-label="Slide 3"
+				></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="primera.png" class="d-block w-100" alt="..." />
+				</div>
+				<div class="carousel-item">
+					<img src="muestra.jpg" class="d-block w-100" alt="..." />
+				</div>
+				<div class="carousel-item">
+					<img src="pimento.jpg" class="d-block w-100" alt="..." />
+				</div>
+			</div>
+			<button
+				class="carousel-control-prev"
+				type="button"
+				data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="prev"
+			>
+				<span
+					class="carousel-control-prev-icon"
+					aria-hidden="true"
+				></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button
+				class="carousel-control-next"
+				type="button"
+				data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="next"
+			>
+				<span
+					class="carousel-control-next-icon"
+					aria-hidden="true"
+				></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+		<div class="card-group">
+			<div class="card">
+				<img alt="abc.jpg" class="card-img-top" src="abc.jpg" />
+				<div class="card-body">
+					<p class="card-text">
+						Harmony es una empreesa creada pensando en mejorar la
+						calida de vida de las personas, inicialmente nos
+						dedicabamos a la estetica y a la belleza, durante el
+						tiempo de pandemia nacio Harmony Garden como nosotros
+						decimos un hijo de nuestro Harmony y poco a poco fuimos
+						consstruyendo una idea diferente de belleza en donde
+						integramos la alimentacion saludable y cultivada por
+						nosotros mismos como pilar de nuestra vision,
+						actualmente nos encontramos desarrollando diferentes
+						tipos de proyectos al interior para poder ofertar
+						servicios de calidad, dentro de ellos la alimentacion y
+						el entrenamiento.
+					</p>
+					<p class="card-text">
+						<small class="text-muted"
+							>conoce mas de nosotros en nuestras redes
+							sociales</small
+						>
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<img
+					src="esteticajpg.jpg"
+					class="card-img-top"
+					alt="estetica.jpg"
+				/>
+				<div class="card-body">
+					<h5 class="Harmony Body">Harmony Body</h5>
+					<p class="card-text">
+						This card has supporting text below as a natural lead-in
+						to additional content.
+					</p>
+					<p class="card-text">
+						<small class="text-muted"
+							>Last updated 3 mins ago</small
+						>
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<img src="estilo.jpg" class="card-img-top" alt="estilo.jpg" />
+				<div class="card-body">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">
+						This is a wider card with supporting text below as a
+						natural lead-in to additional content. This card has
+						even longer content than the first to show that equal
+						height action.
+					</p>
+					<p class="card-text">
+						<small class="text-muted"
+							>Last updated 3 mins ago</small
+						>
+					</p>
+				</div>
+			</div>
+			<div class="row g-0 bg-light position-relative">
+				<div class="col-md-6 mb-md-0 p-md-4">
+					<h5 class="mt-0">Columns with stretched link</h5>
+					<p>
+						Another instance of placeholder content for this other
+						custom component. It is intended to mimic what some
+						real-world content would look like, and we're using it
+						here to give the component a bit of body and size.
+					</p>
+					<a href="#" class="stretched-link">Go somewhere</a>
+				</div>
+				<div class="col-md-6 p-4 ps-md-0">
+					<img src="estilo.jpg" class="w-100" alt="estilo.jpg" />
+				</div>
+			</div>
+			<div class="d-flex position-relative">
+				<img src="ejercicio.jpg" class="w-100" alt="ejercicio.jpg" />
+				<div>
+					<h5 class="mt-0">Custom component with stretched link</h5>
+					<p>
+						This is some placeholder content for the custom
+						component. It is intended to mimic what some real-world
+						content would look like, and we're using it here to give
+						the component a bit of body and size.
+					</p>
+					<a href="#" class="stretched-link">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+			integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+			integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
